[example] fix vertical-align middle

--- a/demo/example/scss/style.scss
+++ b/demo/example/scss/style.scss
@@ -15,8 +15,13 @@
 	left:50%;
 	top:50px;
 	margin-left:-150px;
-	display:table-cell;
 	color:#fff;
-	vertical-align: middle;
-	text-align: center;
+
+	> div{
+		width:300px;
+		height:300px;
+		display:table-cell;
+		vertical-align: middle;
+		text-align: center;
+	}
 }
